--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.qmd
@@ -388,7 +388,6 @@ plot_group_tab_all_prosocial <- margot::margot_plot(
 )
 
 
-plot_group_tab_all_prosocial
 
 
 plot_group_tab_all_prosocial_null <- margot::margot_plot(
@@ -459,13 +458,26 @@ plot_group_tab_all_prosocial_null_zero
 
 # pathwork
 library(patchwork)
+library(ggplot2)
 plot_group_tab_all_prosocial
 study_1 <- plot_group_tab_all_prosocial$plot /
 plot_group_tab_all_prosocial_null$plot/
   plot_group_tab_all_prosocial_null_zero$plot + 
   plot_annotation(title = "Study 1: Self-Reported Prosociality", tag_levels = 'A',
              theme = theme(plot.title = element_text(size = 16, face = "bold")))
-study_1
+
+ggsave(
+  study_1,
+  filename = "figure_study_1.png",
+  width = 10,
+  height = 14,
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600,
+  units = "in",
+  path = here::here(here::here(push_mods, "figs")),
+)
+
 
 
 tab_received_time
@@ -550,6 +562,17 @@ plot_group_tab_all_received_time_null$plot/
 study_2
 
 
+ggsave(
+  study_2,
+  filename = "figure_study_2.png",
+  width = 10,
+  height = 14,
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600,
+  units = "in",
+  path = here::here(here::here(push_mods, "figs")),
+)
 
 
 
@@ -636,6 +659,17 @@ plot_group_tab_all_received_money_null$plot/
                   theme = theme(plot.title = element_text(size = 16, face = "bold")))
 study_3
 
+ggsave(
+  study_3,
+  filename = "figure_study_3.png",
+  width = 10,
+  height = 14,
+  device = 'png',
+  limitsize = FALSE,
+  dpi = 600,
+  units = "in",
+  path = here::here(here::here(push_mods, "figs")),
+)
 
 
 
@@ -1023,7 +1057,7 @@ To consistently estimate a causal effect, investigators must satisfy three assum
 ### Target Population
 
 
-Our target population comprises New Zealand residents represented in the baseline wave of the NZAVS during 2018–2019, weighted by 2018 New Zealand Census data for age, gender, and ethnicity [@sibley2021]. Although the NZAVS is a national probability study designed to reflect the broader New Zealand population, it tends to under-sample males and individuals of Asian descent and over-sample females and Māori (the indigenous people of New Zealand). To address these disparities and enhance the accuracy of our findings, we applied survey weights adjusting for age, gender, and ethnicity. Survey weights were integrated into our statistical models using the weights option in `lmtp` [@williams2021], following the group's established protocols [@bulbulia2024PRACTICAL].  Note that the sample in this study is a single cohort, enrolled in the New Zealand Attitudes and Values Study in NZAVS wave 10 and NZAVS wave 11, and which may have been lost-to-follow up in NZAVS wave 12.
+Our target population comprises New Zealand residents represented in the baseline wave of the NZAVS during 2018–2019, weighted by 2018 New Zealand Census data for age, gender, and ethnicity [@sibley2021]. Although the NZAVS is a national probability study designed to reflect the broader New Zealand population, it tends to under-sample males and individuals of Asian descent and over-sample females and Māori (the indigenous people of New Zealand). To address these disparities and enhance the accuracy of our findings, we applied survey weights adjusting for age, gender, and ethnicity. Survey weights were integrated into our statistical models using the weights option in `lmtp` [@williams2021], following protocols described in @bulbulia2024PRACTICAL.  Note that the sample in this study is a single cohort, enrolled in the New Zealand Attitudes and Values Study in NZAVS wave 10 and NZAVS wave 11, and which may have been lost-to-follow up in NZAVS wave 12.
 
 
 ### Eligibility Criteria
@@ -1872,7 +1906,7 @@ Despite the strengths of our study, several limitations persist. We should not c
 
 Simply put, our one-year estimates of charitable giving and volunteering trends may give a false sense of security, suggesting that a decline in religious attendance will not significantly affect philanthropic contributions. Conversely, a sharp rise in religious attendance could yield more significant benefits than our short-term forecasts suggest. Ultimately, our results indicate near-term effects on population behaviour, but they should not be viewed as causal predictions set in stone. Again, precise causal methods do not necessarily produce correspondingly precise causal answers. We do not claim to have a magical crystal ball. Here, we provide signals, not certainties.
 
-Finally, the generalisability of our findings beyond New Zealand remains to be investigtated. Although our results apply to the New Zealand population, further research is needed to determine whether these findings hold in other cultural or national contexts. Initiatives such as the Global Flourish Study [@johnson2022global], and others, will eventually provide opportunities to apply causal methods across diverse cultures.
+Finally, the generalisability of our findings beyond New Zealand remains to be investigated. Although our results apply to the New Zealand population, further research is needed to determine whether these findings hold in other cultural or national contexts. Initiatives such as the Global Flourish Study [@johnson2022global], and others, will eventually provide opportunities to apply causal methods across diverse cultures.
 
 In conclusion, by integrating robust causal methods with longitudinal panel data, we provide clear quantitative evidence that religious service attendance causally affects prosocial behaviours. Beyond the significance of these findings, we hope this study encourages psychological scientists to adopt causal methods, which remain underutilised in the discipline. Most psychological questions are inherently causal. To understand the effects of interventions, something beyond the associational methods that dominate observational psychology is required [@bulbulia2024swigstime;@vanderweele2021can; @rohrer2022PATH].
 
