--- a/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
+++ b/manuscripts/24-lmtp-coop-church/24_bulbulia_lmtp_coop_church.tex
@@ -180,6 +180,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
+
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -197,6 +198,7 @@
   citecolor={Blue},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
+
 
 \title{The Causal Effects of Religious Service Attendance on Prosocial
 Behaviours in New Zealand: A National Longitudinal Study}
@@ -247,7 +249,7 @@ University of Wellington
       
 
 
-\date{2024-10-14}
+\date{2024-10-15}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -281,6 +283,7 @@ and their social consequences.
 \emph{Semi-parametric}; \emph{Targeted Learning}; \emph{TMLE};
 \emph{Volunteering}.
 \end{abstract}
+
 
 \subsection{Introduction}\label{introduction}
 
@@ -560,12 +563,12 @@ Zealand). To address these disparities and enhance the accuracy of our
 findings, we applied survey weights adjusting for age, gender, and
 ethnicity. Survey weights were integrated into our statistical models
 using the weights option in \texttt{lmtp}
-(\citeproc{ref-williams2021}{Williams and Díaz 2021}), following the
-group's established protocols
-(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}). Note that the
-sample in this study is a single cohort, enrolled in the New Zealand
-Attitudes and Values Study in NZAVS wave 10 and NZAVS wave 11, and which
-may have been lost-to-follow up in NZAVS wave 12.
+(\citeproc{ref-williams2021}{Williams and Díaz 2021}), following
+protocols described in Bulbulia
+(\citeproc{ref-bulbulia2024PRACTICAL}{2024a}). Note that the sample in
+this study is a single cohort, enrolled in the New Zealand Attitudes and
+Values Study in NZAVS wave 10 and NZAVS wave 11, and which may have been
+lost-to-follow up in NZAVS wave 12.
 
 \subsubsection{Eligibility Criteria}\label{eligibility-criteria}
 
@@ -1765,7 +1768,7 @@ correspondingly precise causal answers. We do not claim to have a
 magical crystal ball. Here, we provide signals, not certainties.
 
 Finally, the generalisability of our findings beyond New Zealand remains
-to be investigtated. Although our results apply to the New Zealand
+to be investigated. Although our results apply to the New Zealand
 population, further research is needed to determine whether these
 findings hold in other cultural or national contexts. Initiatives such
 as the Global Flourish Study (\citeproc{ref-johnson2022global}{Johnson
@@ -3086,6 +3089,7 @@ estimating causal effects via outcome regression in observational
 studies? \emph{BMC Medical Research Methodology}, \textbf{23}(1), 42.
 
 \end{CSLReferences}
+
 
 
 
